// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSBreadcrumb 1 Item 1`] = `
<div
  className="slds-p-around_medium"
>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      className="slds-breadcrumb slds-list_horizontal"
    >
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="javascript:void(0);"
        >
          Parent Entity
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`DOM snapshots SLDSBreadcrumb 2 Items 1`] = `
<div
  className="slds-p-around_medium"
>
  <nav
    aria-label="Two item breadcrumb"
    role="navigation"
  >
    <ol
      className="slds-breadcrumb slds-list_horizontal"
    >
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="javascript:void(0);"
          id="parent-entity"
        >
          Parent Entity
        </a>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="javascript:void(0);"
        >
          Parent Record Name
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`DOM snapshots SLDSBreadcrumb 5 Items with overflow menu 1`] = `
<div
  className="slds-p-around_medium"
>
  <nav
    aria-label="Breadcrumb with overflow menu"
    role="navigation"
  >
    <ol
      className="slds-breadcrumb slds-list_horizontal"
    >
      <li
        className="slds-breadcrumb__item"
      >
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger_click"
        >
          <button
            aria-haspopup="true"
            className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
            onClick={[Function]}
            title="Show More"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#threedots"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Show More
            </span>
          </button>
          <div
            className="slds-dropdown slds-dropdown_left slds-dropdown_actions slds-is-open"
          >
            <ul
              className="slds-dropdown__list"
              role="menu"
            >
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  href="javascript:void(0);"
                >
                  Menu Item 1
                </a>
              </li>
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  href="javascript:void(0);"
                >
                  Menu Item 2
                </a>
              </li>
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  href="javascript:void(0);"
                >
                  Menu Item 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="javascript:void(0);"
        >
          Parent Entity
        </a>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="javascript:void(0);"
        >
          Parent Record Name
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`DOM snapshots SLDSBreadcrumb Base with overflow menu 1`] = `
<div
  className="slds-p-around_medium"
>
  <nav
    aria-label="Breadcrumb with overflow menu"
    role="navigation"
  >
    <ol
      className="slds-breadcrumb slds-list_horizontal"
    >
      <li
        className="slds-breadcrumb__item"
      >
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger_click"
        >
          <button
            aria-haspopup="true"
            className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
            onClick={[Function]}
            title="Show More"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#threedots"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              Show More
            </span>
          </button>
          <div
            className="slds-dropdown slds-dropdown_left slds-dropdown_actions slds-is-open"
          >
            <ul
              className="slds-dropdown__list"
              role="menu"
            >
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  href="javascript:void(0);"
                >
                  Menu Item 1
                </a>
              </li>
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  href="javascript:void(0);"
                >
                  Menu Item 2
                </a>
              </li>
              <li
                className="slds-dropdown__item"
                role="presentation"
              >
                <a
                  href="javascript:void(0);"
                >
                  Menu Item 3
                </a>
              </li>
            </ul>
          </div>
        </div>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="javascript:void(0);"
        >
          Parent Entity
        </a>
      </li>
      <li
        className="slds-breadcrumb__item"
      >
        <a
          href="javascript:void(0);"
        >
          Parent Record Name
        </a>
      </li>
    </ol>
  </nav>
</div>
`;
